{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 454,
  "lineage": "712ecec5-d211-3d4e-e8b3-fa63c9276ce8",
  "resources": [
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_elb",
      "name": "swisscom-assignment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:465630071718:loadbalancer/swisscom-assignment",
            "availability_zones": [
              "eu-west-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "swisscom-assignment-110391360.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "swisscom-assignment",
            "idle_timeout": 60,
            "instances": [
              "i-059b2a69b42f88379",
              "i-0ee9a50fcd91199d0"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "swisscom-assignment",
            "security_groups": [
              "sg-0ec089e7b5838b31b"
            ],
            "source_security_group": "465630071718/swisscom-assignment-elb",
            "source_security_group_id": "sg-0ec089e7b5838b31b",
            "subnets": [
              "subnet-0f6198c6cddf436a7"
            ],
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.app-asg.aws_security_group.elb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:security-group/sg-0ec089e7b5838b31b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec089e7b5838b31b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swisscom-assignment-elb",
            "name_prefix": "",
            "owner_id": "465630071718",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:security-group/sg-0365a6e59283e02ae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0365a6e59283e02ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "swisscom-assignment-instance",
            "name_prefix": "",
            "owner_id": "465630071718",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0551bf2a5bb48bc5c",
            "arn": "arn:aws:ec2:eu-west-1:465630071718:instance/i-0de0c912744e37789",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de0c912744e37789",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swisscom-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e59ef4f84d1fa94",
            "private_dns": "ip-20-0-2-158.eu-west-1.compute.internal",
            "private_ip": "20.0.2.158",
            "public_dns": "ec2-54-74-198-90.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.198.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd9ccafb236dc1ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f6198c6cddf436a7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0ee5eaa5b797241"
            ]
          },
          "dependencies": [
            "module.bastion-server.aws_security_group.instance",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:security-group/sg-0d0ee5eaa5b797241",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d0ee5eaa5b797241",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "swisscom-bastion-instance",
            "name_prefix": "",
            "owner_id": "465630071718",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mysql-db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:security-group/sg-08c4880690b7c60fb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08c4880690b7c60fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "swisscom-assignment-db-security-group",
            "name_prefix": "",
            "owner_id": "465630071718",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09aedff30d52aec24",
            "association_id": "eipassoc-097ca6b39b6cf7178",
            "domain": "vpc",
            "id": "eipalloc-09aedff30d52aec24",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-02e62397977efa7b2",
            "private_dns": "ip-20-0-2-70.eu-west-1.compute.internal",
            "private_ip": "20.0.2.70",
            "public_dns": "ec2-99-80-89-43.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.89.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:internet-gateway/igw-0b3fbf6c004e30584",
            "id": "igw-0b3fbf6c004e30584",
            "owner_id": "465630071718",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-igw"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-igw"
            },
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09aedff30d52aec24",
            "connectivity_type": "public",
            "id": "nat-00728ee7c529555d1",
            "network_interface_id": "eni-02e62397977efa7b2",
            "private_ip": "20.0.2.70",
            "public_ip": "99.80.89.43",
            "subnet_id": "subnet-0f6198c6cddf436a7",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e484bef398419c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00728ee7c529555d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e484bef398419c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b3fbf6c004e30584",
            "id": "r-rtb-0e55783b333e3e1d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e55783b333e3e1d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:route-table/rtb-02e484bef398419c5",
            "id": "rtb-02e484bef398419c5",
            "owner_id": "465630071718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00728ee7c529555d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-private-route-table"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:route-table/rtb-0e55783b333e3e1d3",
            "id": "rtb-0e55783b333e3e1d3",
            "owner_id": "465630071718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3fbf6c004e30584",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-public-route-table"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef3896e06a9d592",
            "route_table_id": "rtb-02e484bef398419c5",
            "subnet_id": "subnet-0cf574e4ccfbdb7db"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5eba0a6ac740946",
            "route_table_id": "rtb-02e484bef398419c5",
            "subnet_id": "subnet-04e2ee652cc0e51c3"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbd35318a1ac7cec",
            "route_table_id": "rtb-0e55783b333e3e1d3",
            "subnet_id": "subnet-0f6198c6cddf436a7"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:security-group/sg-005b369c08b43b543",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-005b369c08b43b543",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "swisscom-assignment-environment-default-sg",
            "name_prefix": "",
            "owner_id": "465630071718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "swisscom-assignment-environment"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:subnet/subnet-0cf574e4ccfbdb7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "20.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf574e4ccfbdb7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465630071718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1a-private-subnet"
            },
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:subnet/subnet-04e2ee652cc0e51c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "20.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2ee652cc0e51c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465630071718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1b-private-subnet"
            },
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:subnet/subnet-0f6198c6cddf436a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6198c6cddf436a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "465630071718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-eu-west-1a-public-subnet"
            },
            "vpc_id": "vpc-0e87ae03e63b39a94"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465630071718:vpc/vpc-0e87ae03e63b39a94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-05cdd4f7ba5a2702c",
            "default_route_table_id": "rtb-0bcdcf595ec2cdaae",
            "default_security_group_id": "sg-08c8e89985bba2994",
            "dhcp_options_id": "dopt-0f8a9efa698bc1c6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e87ae03e63b39a94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcdcf595ec2cdaae",
            "owner_id": "465630071718",
            "tags": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-vpc"
            },
            "tags_all": {
              "Environment": "swisscom-assignment-environment",
              "Name": "swisscom-assignment-environment-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}